[HTML] Update title

--- a/til_docs/template.html
+++ b/til_docs/template.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Sean Rich: Today I Learned</title>
+  <title>Learn Code Daily - A Collection of Tech Topics</title>
 
   <style>
     /*! ADAPTED
@@ -912,7 +912,7 @@
     title = title.substring(0, 1).toUpperCase().concat(title.substring(1))
     title = title || "Home"
     headerEl.textContent = title
-    document.title = title
+  </script>
 
 
   <script>
