[Twitter] Update twitter page

--- a/til_docs/template.html
+++ b/til_docs/template.html
@@ -642,26 +642,12 @@
     .twitter-follow-container > iframe.twitter-follow-button-rendered {
         opacity: 0;
         /* Forwards means this element will retain opacity 1 after animation */
-        animation: fadeIn 2s cubic-bezier(1,.04,.4,1.03) 0s 1 normal forwards;
-        -moz-animation: fadeIn 2s cubic-bezier(1,.04,.4,1.03) 0s 1 normal forwards;
-        -webkit-animation: fadeIn 2s cubic-bezier(1,.04,.4,1.03) 0s 1 normal forwards;
+        animation: fadeIn 1.5s cubic-bezier(1,.04,.4,1.03) 0s 1 normal forwards;
+        -moz-animation: fadeIn 1.5s cubic-bezier(1,.04,.4,1.03) 0s 1 normal forwards;
+        -webkit-animation: fadeIn 1.5s cubic-bezier(1,.04,.4,1.03) 0s 1 normal forwards;
         -o-animation: fadeIn 2s cubic-bezier(1,.04,.4,1.03) 0s 1 normal forwards;
         -ms-animation: fadeIn 2s cubic-bezier(1,.04,.4,1.03) 0s 1 normal forwards;
     }
-
-    /* .twitter-follow-button {
-      display: hidden;
-      position: relative;
-      height: 20px;
-      box-sizing: border-box;
-      padding: 1px 8px 1px 6px;
-      background-color: #1b95e0;
-      color: #fff;
-      border-radius: 3px;
-      font-weight: 500;
-      cursor: pointer;
-      font-size: 11px;
-    } */
 
     .page-header {
       border-bottom: 1px solid var(--border-color);
@@ -743,7 +729,7 @@
 
 
       <div class="twitter-follow-container">
-        <a href="https://twitter.com/SeanRich366?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @SeanRich366</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <a href="https://twitter.com/TheSeanRich?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @TheSeanRich</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
 
       <div class="back-to-top">
