[Resume] Add resume to website

--- a/til_docs/template.html
+++ b/til_docs/template.html
@@ -737,9 +737,9 @@
 
 
 
-      <div class="twitter-follow-container">
-        <a href="https://twitter.com/TheSeanRich?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @TheSeanRich</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-      </div>
+<!--      <div class="twitter-follow-container">-->
+<!--        <a href="https://twitter.com/TheSeanRich?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @TheSeanRich</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>-->
+<!--      </div>-->
 
       <div class="back-to-top">
         <a onclick="scrollToTop()" role="button">
