[Yarn] Fix deployment

--- a/til_docs/template.html
+++ b/til_docs/template.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Learn Code Daily - A Collection of Tech Topics</title>
+  <title>Let's Learn - A Collection of Tech Topics</title>
 
   <style>
     /*! ADAPTED
